[project]
name = "woodsort"
version = "0.1.0"
description = "spike sorting pipeline in Wood/Dudchenko lab"
authors = [
    { name = "Adrian Duszkiewicz", email = "a.j.duszkiewicz@gmail.com" },
    { name = 'Anna Rastedt', email = "s1972858@ed.ac.uk" }  # New author added here
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spikeinterface[full] (>=0.103.2,<0.104.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pynapple (==0.7.1)",
    "spikeinterface-gui (>=0.12.0,<0.13.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
